# generative-art

./: .gitignore  Cargo.toml  LICENSE  README.md
ga-cli/: Cargo.toml
ga-cli/src/: main.rs
ga-web/: .gitignore  Cargo.toml  Makefile.toml  README.md  Rocket.toml
ga-web/src/: canvas_renderer.rs  lib.rs  main.rs  preslav.rs
ga-web/www/: bootstrap.js  index.html  index.js  package.json  style.css
generative-art/: Cargo.toml
generative-art/src/: canvas.rs  celestial.rs  convert.rs  helpers.rs  lib.rs  main.rs  pipeline.rs  preslav.rs  sketch.rs
generative-art/src/sketchers/: canvas.rs  celestial.rs  color.rs  fragment.rs  halftone.rs  jitter.rs  mod.rs  omni.rs  preslav.rs  rastercanvas.rs  rasterconverter.rs  vectorcanvas.rs  vectorsketcher.rs  wave.rs
src/: lib.rs  main.rs  progress.js  sketch.rs
www/: index.html  index.js  package.json
