[package]
name = "generative-art"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.44"
image = "0.23.14"
imageproc = "0.22.0"
indicatif = "0.16.2"
rand = { version = "0.8.4", default-features = false, features = ["std_rng"]}
structopt = "0.3.23"
wasm-bindgen = "0.2.78"
