[package]
name = "generative-art"
version = "0.1.0"
authors = ["Elijah Potter <elijah.sirius@protonmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.44"
base64 = "0.13.0"
image = { version = "0.23.14", default-features = false, features = [
    "jpeg",
    "ico",
    "png",
    "pnm",
    "tga",
    "tiff",
    "bmp",
] }
imageproc = { version = "0.22.0", default-features = false }
indicatif = "0.16.2"
js-sys = "0.3.55"
rand = { version = "0.8.4", default-features = false, features = ["std_rng"] }
structopt = "0.3.23"
