[package]
name = "ga-web"
version = "0.1.0"
authors = ["Elijah Potter <elijah.sirius@protonmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
generative-art = { path = "../generative-art/", default-features = false, features = [
    "small-rng",
] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }
base64 = "0.13.0"
web-sys = { version = "0.3.55", features = [
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
] }
rand = {version = "0.8.4", default-features = false}

[profile.release]
opt-level = "s"
