[package]
name = "generative-art"
version = "0.1.0"
authors = ["Elijah Potter <elijah.sirius@protonmail.com>"]
edition = "2021"

[lib]

[dependencies]
anyhow = "1.0.45"
glam = "0.19.0"
image = { version = "0.23.14", default-features = false, features = [
    "jpeg",
    "png",
    "tiff",
    "bmp",
] }
indicatif = "0.16.2"
rand = { version = "0.8.4" }
resvg = "0.19.0"
structopt = "0.3.25"
svg = "0.10.0"
tiny-skia = "0.6.1"
usvg = "0.19.0"

[features]
