[package]
name = "generative-art"
version = "0.2.0"
authors = ["Elijah Potter <elijah.sirius@protonmail.com>"]
edition = "2021"

[lib]

[features]
default = ["thread-rng"]
small-rng = ["rand/small_rng"]
thread-rng = ["rand/std", "rand/std_rng"]

[dependencies]
anyhow = "1.0.45"
indicatif = "0.16.2"
rand = { version = "0.8.4", default-features = false }
structopt = "0.3.25"
# denim = { git = "https://github.com/chilipepperhott/denim" }
denim = {path = "../../denim"}
image = "0.23.14"
